--- a/config.json
+++ b/config.json
@@ -75,7 +75,8 @@
         "manual 2",
         "random 1 10",
         "random 1 10 random_seed",
-        "random 1 10 random_seed ___"
+        "random 1 10 random_seed ___",
+        "random 1 10 random_seed ____"
     ],
     "versions": {
         "config": 1,
