Add: Same Seed Logic

--- a/config.json
+++ b/config.json
@@ -70,6 +70,7 @@
         "random 1 10",
         "random 1 10 random_seed",
         "random 1 10 random_seed ___",
+        "random 1 10 random_seed ____",
         "random 1 10 random_seed ____"
     ],
     "versions": {
